# readingdb

./: .gitignore  Dockerfile  Dockerfile.readingdb  Dockerfile.unzipper  Pipfile  README.md  Untitled.ipynb  access.md  additem.py  at.py  commands.sh  deletetable.py  farg.py  gen.py  gps_cvt.ipynb  imgReadingAdd.py  lamb.py  locationReadingAdd.py  maketable.py  pad.ipynb  pad.py  predReadingAdd.py  pyproject.toml  readitem.py  requirements.txt  sample.py  setup.py  snapping.ipynb  test_api.py  test_save.py  update.py  upload.py
aws/: credentials  fargate.md  fargate.sh  readingdb.sh  unzipper-td.json
design/: access.md  associations.graphml  classes.graphml  cold-storage-flowchart.graphml  database_objects.md  entity-diagram.graphml  example.csv  git_process.md  items.csv  items.md  readings.md  routesave.md  segments.md  workflows.graphml
google/: credentials.json
readingdb/: annotator.py  api.py  auth.py  authresponse.py  clean.py  cognito.py  commands.sh  conditions.py  constants.py  converter.py  db.py  digester.py  download_json.py  endpoints.py  entities.py  entity.py  entry.py  eventhandler.py  farg.py  format.py  geolocator.py  getat.py  lamb.py  lambda.py  lambda_event_functions.py  lambda_event_handlers.py  lineroute.py  maketable.py  mlapi.py  normalize.py  reading.py  readingdb.py  readingspec.py  roadpoint.py  route.py  routespec.py  routestatus.py  rutils.py  s3uri.py  sqsqueue.py  (+17 more)
readingdb/test_data/: ann_route.json  annotated_imgs.json  box-hill-geolocated.json  box-hill.json  example_route.json  fdsadmin.json  fdsguest.json  fdstest.json  ftg_20_route.json  ftg_filtered_entries.json  ftg_imgs.json  ftg_route.json  gps.json  gps_img_route.json  img.json  lambda_events.json  long_route.json  melb_gps_img.json  noname_route.json  s3_event.json  s3_event_malformed.json  s3_event_real.json  s3_metadata.json  sample_readings.json  sydney_entries.json  sydney_entries_short.json  sydney_entries_very_short.json  sydney_route.json  sydney_route_filtered.json  sydney_route_short.json  sydney_route_very_short.json  tst_imgs.json
readingdb/test_data/route_imgs/route_2021_04_07_17_14_36_709/: GPS.txt
(+4 files in other folders)
