[tool.poetry]
name = "readingsdb"
version = "0.1.0"
description = ""
authors = ["Louka Ewington Pitsos <lewingtonpitsos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
argon2-cffi = "^20.1.0"
astroid = "^2.6.2"
async_generator = "^1.10"
attrs = "^21.2.0"
backcall = "^0.2.0"
bleach = "^3.3.0"
boto3 = "^1.17.107"
botocore = "^1.20.107"
certifi = "^2021.5.30"
cffi = "^1.14.5"
chardet = "^4.0.0"
cryptography = "^3.4.7"
decorator = "^5.0.9"
defusedxml = "^0.7.1"
docker = "^5.0.0"
entrypoints = "^0.3"
geographiclib = "^1.52"
geopy = "^2.1.0"
googlemaps = "^4.4.5"
haversine = "^2.3.1"
importlib-metadata = "^4.6.1"
ipython_genutils = "^0.2.0"
ipywidgets = "^7.6.3"
jedi = "^0.18.0"
Jinja2 = "^3.0.1"
jmespath = "^0.10.0"
jsonschema = "^3.2.0"
jupyter-console = "^6.4.0"
jupyter-core = "^4.7.1"
jupyter = "^1.0.0"
jupyterlab-pygments = "^0.1.2"
jupyterlab-widgets = "^1.0.0"
lazy-object-proxy = "^1.6.0"
MarkupSafe = "^2.0.1"
mccabe = "^0.6.1"
mistune = "^0.8.4"
more-itertools = "^8.8.0"
moto = {extras = ["sqs"], version = "^2.0.11"}
nbformat = "^5.1.3"
nest-asyncio = "^1.5.1"
notebook = "^6.4.0"
packaging = "^21.0"
pandocfilters = "^1.4.3"
parso = "^0.8.2"
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
prometheus-client = "^0.11.0"
ptyprocess = "^0.7.0"
pycparser = "^2.20"
Pygments = "^2.9.0"
pylint = "^2.9.3"
pyparsing = "^2.4.7"
pyrsistent = "^0.18.0"
python-dateutil = "^2.8.1"
pytz = "^2021.1"
pyzmq = "^22.1.0"
qtconsole = "^5.1.1"
QtPy = "^1.9.0"
requests = "^2.25.1"
responses = "^0.13.3"
s3transfer = "^0.4.2"
Send2Trash = "^1.7.1"
six = "^1.16.0"
terminado = "^0.10.1"
testpath = "^0.5.0"
toml = "^0.10.2"
tornado = "^6.1"
tqdm = "^4.61.2"
typed-ast = "^1.4.3"
typing-extensions = "^3.10.0"
urllib3 = "^1.26.6"
wcwidth = "^0.2.5"
webencodings = "^0.5.1"
websocket-client = "^1.1.0"
Werkzeug = "^2.0.1"
widgetsnbextension = "^3.5.1"
wrapt = "^1.12.1"
xmltodict = "^0.12.0"
zipp = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
